<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/desgradado"
    tools:context=".principal">

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="216dp"

        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:background="@drawable/tb_bordes_redondos"
        android:drawableLeft="@drawable/uicon"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/txtRNC"
        android:inputType="textPersonName|textWebEmailAddress"
        android:padding="10dp"
        android:textColor="#fff"
        android:textFontWeight="2dp"
        app:layout_constraintEnd_toEndOf="@+id/etClave"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/etClave"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etClave"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/tb_bordes_redondos"
        android:ems="10"
        android:hint="@string/txtClave"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#fff"
        android:textFontWeight="2dp"
        app:layout_constraintEnd_toEndOf="@+id/btEntrar"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="@+id/btEntrar"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario" />

    <Button
        android:id="@+id/btEntrar"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/tb_bordes_redondos"
        android:text="@string/btnEntrar"
        android:textColor="#fff"
        android:textFontWeight="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etClave" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="176dp"
        android:layout_height="200dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="@+id/etUsuario"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/etUsuario"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dona" />

</android.support.constraint.ConstraintLayout>